feat: give every SSE event a typed payload
Payloads were assembled as ad-hoc maps at each publish site, so an
event's wire shape existed only in the code that built it, and the
envelope handed browsers the routing and exclusion fields it uses
internally.

Each event type gets a record, delivery strips the routing fields, the
suspension kind becomes an enum, and an unrecognised type is dropped
rather than delivered. The client envelope schema and the two consumers
move with it, because the removed fields have no build-time signal.

A reply now carries its parent id, so an event-delivered comment can be
placed in the tree without refetching it.